# jsort

./: .gitignore  README.md  config.ini  pylintrc  pyproject.toml
file_sorter/: __main__.py  file_extensions.py  set_dirs.py
jsort/: __init__.py
jsort/set_dirs/: __init__.py  get_xdg.py  read_config.py
tests/: test_sort.py
