[tool.poetry]
name = "file-sorter"
version = "0.1.0"
description = "monitor downloads folder for new files and sort them accordingly"
authors = ["sudo-julia <jlearning@tuta.io>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
watchdog = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
